# ConflagrantEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: EcsConfig.cmake
cmake/Modules/: FindAssimp.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindJsonCpp.cmake  FindOpenCL.cmake  FindOpenGL.cmake  Findassimp.cmake
examples/: CMakeLists.txt  example1.cc  example2.cc
examples/editor/: .gitignore  CMakeLists.txt  bunny.cfl  example_editor.cc  procterrain.cfl  san_miguel.cfl  scene.cfl
examples/example1/: CMakeLists.txt
examples/example1/assets/: config.cfl
examples/example1/assets/shaders/: standard.frag
src/: test.cc
src/conflagrant/: CL.cc  CL.hh  ComponentFactory.cc  ComponentFactory.hh  DoubleBuffer.hh  DoubleBufferedTexture2D.hh  Engine.cc  Engine.hh  Factory.cc  Factory.hh  GL.cc  GL.hh  Input.cc  Input.hh  InputManager.cc  InputManager.hh  Material.hh  Mesh.hh  Model.hh  RenderStats.hh  ShaderSourceManager.cc  ShaderSourceManager.hh  Singleton.hh  SmartValue.hh  System.hh  SystemFactory.cc  SystemFactory.hh  TestGLFW3.cc  Time.cc  Time.hh  Timer.hh  Window.hh  args.cc  args.hh  conflagrant.cc  conflagrant.hh  events.hh  factory_util.hh  geometry.cc  geometry.hh  (+8 more)
src/conflagrant/assets/: Asset.hh  AssetLoader.hh  AssetManager.cc  AssetManager.hh  Image.hh  Material.hh  Mesh.hh  Model.hh  Texture.hh  Texture2D.hh
src/conflagrant/assets/loaders/: AssimpGlmConvert.hh  MeshLoader.hh  ModelLoader.cc  ModelLoader.hh  TextureLoader.cc  TextureLoader.hh
src/conflagrant/cl/: Environment.hh
src/conflagrant/components/: ActiveCamera.hh  BoundingSphere.hh  DirectionalLight.hh  DirectionalLightAnimation.hh  DirectionalLightShadow.hh  Guid.hh  Material.hh  Mesh.hh  MeshComponent.hh  Model.hh  Name.hh  OrthographicCamera.hh  PeriodicalAnimation.hh  PerspectiveCamera.hh  PointLight.hh  ProceduralGeometry.hh  ProceduralTerrain.hh  Skydome.hh  SnowEmitter.hh  Transform.hh  VctProperties.hh  VelocityAnimation.hh
src/conflagrant/ecs/: Component.hh  ComponentFilter.hh  EcsManager.cc  EcsManager.hh  EcsTypes.hh  Entity.cc  System.cc  System.hh
src/conflagrant/ecs/internal/: ClassType.hh  ComponentType.cc  ComponentType.hh  EcsAssert.hh  EntityStorage.cc  EntityStorage.hh  InternalEcsTypes.hh  SystemType.hh
src/conflagrant/geometry/: Mesh.hh
src/conflagrant/gl/: Buffer.hh  DoubleBufferedTexture1D.hh  DoubleBufferedTexture2D.hh  Framebuffer.hh  GLObject.hh  GlObject.hh  Mesh.hh  Renderbuffer.hh  Shader.hh  State.hh  StateGroup.hh  Texture.hh  VertexArray.hh
src/conflagrant/glfw/: GlfwWindow.cc  GlfwWindow.hh  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
src/conflagrant/procgen/: MeshDraft.hh  MeshGenerator.hh  Operation.hh  PolygonIterator.hh  QuadMeshDraft.hh  TriMeshDraft.hh  VertexIterator.hh  asset.hh  coordinate_transforms.hh  primitives.cc  primitives.hh
src/conflagrant/procgen/graph/: Edge.hh  Polygon.hh  operation.hh
src/conflagrant/procgen/graph/operations/: Extrude.hh  Inset.hh  Split.hh
src/conflagrant/procgen/meshgenerators/: SimpleHouse.hh  Terrain.hh
src/conflagrant/procgen/parameters/: ImGuiParameters.hh  JsonParameters.hh  Parameters.hh
src/conflagrant/serialization/: ReadStream.hh  Serializable.hh  Serialize.hh  WriteStream.hh  array.hh  crossguid.hh  glm.hh  path.hh  serialize.hh  vector.hh
src/conflagrant/shaders/: forward.frag  forward.vert  forward_skydome.frag  forward_skydome.vert  geometrydepth.frag  geometrydepth.vert  shadowmap_lightpass.frag  shadowmap_lightpass.vert  shadowmap_visualization.frag  shadowmap_visualization.vert  wireframe.frag  wireframe.vert
src/conflagrant/shaders/common/: Attenuation.glsl  Blending.glsl  ComponentWise.glsl  Constants.glsl  Definitions.glsl  DirectionalLight.glsl  GeometryFunctions.glsl  Lighting.glsl  Material.glsl  PointLight.glsl  Random.glsl  SurfaceInfo.glsl  Uniforms.glsl  Unpack.glsl  UnpackImage.glsl  UnpackTexture.glsl  VertexAttributes.glsl
src/conflagrant/shaders/common/ease/: All.glsl  back-in-out.glsl  back-in.glsl  back-out.glsl  bounce-in-out.glsl  bounce-in.glsl  bounce-out.glsl  circular-in-out.glsl  circular-in.glsl  circular-out.glsl  cubic-in-out.glsl  cubic-in.glsl  cubic-out.glsl  elastic-in-out.glsl  elastic-in.glsl  elastic-out.glsl  exponential-in-out.glsl  exponential-in.glsl  exponential-out.glsl  linear.glsl  quadratic-in-out.glsl  quadratic-in.glsl  quadratic-out.glsl  quartic-in-out.glsl  quartic-in.glsl  quartic-out.glsl  quintic-in-out.glsl  quintic-in.glsl  quintic-out.glsl  sine-in-out.glsl  sine-in.glsl  sine-out.glsl
src/conflagrant/shaders/common/noise/: README  cellular2D.glsl  cellular2x2.glsl  cellular2x2x2.glsl  cellular3D.glsl  classicnoise2D.glsl  classicnoise3D.glsl  classicnoise4D.glsl  common.glsl  fractal.glsl  noise2D.glsl  noise3D.glsl  noise3Dgrad.glsl  noise4D.glsl  psrdnoise2D.glsl
src/conflagrant/shaders/deferred/: geometry.frag  lights.frag
src/conflagrant/shaders/particles/: rendering.geom  rendering.vert  rendering_deferred.frag
src/conflagrant/shaders/snow/: SimulateSnowParticle.glsl  SnowGeometryCommon.glsl  SnowParticle.glsl  snow.frag  snow.vert  snowfall_depthsort.comp  snowfall_render.frag  snowfall_render.geom  snowfall_render.vert  snowfall_simulate.comp  snowfall_simulate.frag  snowgeometry.frag  snowgeometry.geom  snowgeometry.vert
src/conflagrant/shaders/voxels/: conetracing.frag  directrendering.frag  directrendering.vert  mipmap.comp  voxelize.frag  voxelize.geom  voxelize.vert
src/conflagrant/shaders/voxels/common/: util.glsl
src/conflagrant/systems/: Animator.cc  Animator.hh  CameraController.cc  CameraController.hh  DeferredRenderer.cc  DeferredRenderer.hh  EcsDebugger.cc  EcsDebugger.hh  ForwardRenderer.cc  ForwardRenderer.hh  ProceduralGenerator.cc  ProceduralGenerator.hh  SnowfallAnimator.cc  SnowfallAnimator.hh  TransformUpdater.hh  system_util.hh
test/: CMakeLists.txt  test_Component.cc  test_EcsManager.cc  test_Engine.cc  test_Entity.cc  test_Serialization.cc  test_System.cc
test/lib/: stl.hh
